--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,3 @@
 {
-	"extends": ["salt", "salt/react"],
-	"rules": {
-		"react/jsx-closing-bracket-location": [
-			"error",
-			{ "selfClosing": "after-props", "nonEmpty": "after-props" }
-		],
-		"react/jsx-filename-extension": ["error", { "extensions": [".js"] }],
-		"react/prop-types": "off"
-	}
+	"extends": ["react-app", "salt"]
 }
